# vgi-bson

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: check-version.sh  preprocess-require.awk  run-integration.sh
crates/bson-core/: Cargo.toml
crates/bson-core/src/: extjson.rs  field.rs  lib.rs  objectid.rs  seq.rs  typeinfo.rs  validate.rs  value.rs
crates/bson-core/tests/: fuzz.rs  vectors.rs
crates/bson-wasm/: Cargo.toml
crates/bson-wasm/src/: lib.rs
crates/bson-worker/: Cargo.toml
crates/bson-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs  value_in.rs
crates/bson-worker/src/scalar/: codec.rs  common.rs  mod.rs  objectid.rs  timestamp.rs  version.rs
crates/bson-worker/src/table/: dump.rs  mod.rs  seq.rs
test/data/: users.bson
test/sql/: basic.test
wasm/: build.sh
