[package]
name = "bson-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-compute BSON structural decoder / Extended-JSON codec / type helpers for the bson VGI worker (no Arrow / VGI deps)"

[dependencies]
# The official MongoDB BSON codec (MIT). Dynamic `Bson`/`Document` value model,
# Extended JSON v2 (canonical + relaxed), Decimal128, Binary subtypes, ObjectId
# with embedded-timestamp access. `serde_json-1` enables the Extended-JSON
# conversions; the `mongodb` driver crate is deliberately NOT pulled in.
bson = { version = "3.1.0", default-features = false, features = ["compat-3-0-0", "serde", "serde_json-1"] }
# `preserve_order` keeps document field order through the Extended-JSON parse so
# `from_json ∘ to_json('canonical')` is byte-identical (the migration guarantee).
serde_json = { version = "1.0", features = ["preserve_order"] }
hex = "0.4"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
