[package]
name = "bson-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker exposing BSON decode / Extended-JSON / typed-field functions to DuckDB over Apache Arrow"

[[bin]]
name = "bson-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
bson-core.workspace = true
# Used directly by the encode path (value_in.rs) to build a `bson::Document` from
# Arrow cells. Same version the core crate resolves, so no duplicate-tree concern.
bson = { version = "3.1.0", default-features = false, features = ["compat-3-0-0", "serde", "serde_json-1"] }
log = "0.4"
env_logger = "0.11"
# Local-filesystem glob expansion for `mongodump_read`.
glob = "0.3"

[dev-dependencies]
bson-core = { workspace = true }
